# CSU-2026-capstone-project

./: .gitignore  AGENTS.md  README.md  aa.py  config.py  db.sqlite3.bak  flake.nix  forward.sh  init.sh  justfile  k8s.py  log  main.py  monitory.py  pyproject.toml  ray-service.sample.yaml  register_image_app.py  register_resources.py  register_strategies.py  test.py  test_dummy.py  test_file_upload.py  test_image_processing.py  test_load.py  test_proxy.py  test_with_real_image.py
alembic/: env.py
api/: routes.py
app/: database.py  k8s_scaler.py  models.py  schemas.py
configs/: controller.yaml  scheduler.yaml
models/: application.py  deployment.py  stage.py  strategy.py  task.py  trace.py
monitor/: __init__.py  controller.py  k8s_class.py  proxy_class.py  pyproject.toml  ray_class.py  scheduler.py  setup.py  utils.py  vm_writer.py
monitor/src/monitor/: __init__.py
offload/: factory.py  scheduler.py  task_plan.py
orchestrator/: ray_executor.py  simple_executor.py  strategy_loader.py
predictor/: demo.py  feature_extract.py  models.py  predict.py  test_predictor.py  train.py
routers/: db_api.py  monitor.py  proxy_router.py
scripts/: init_demo.py  seed_nodes.py
service/: application_service.py  data_transform_service.py  deployment_service.py  experiment_service.py  file_service.py  model_service.py  node_info_service.py  service_service.py  stage_service.py  stage_upload_service.py  strategy_service.py  strategy_upload_service.py  task_service.py
staged_code/: classify.py  cpuprocess.py  feature_extract.py  half_filter.py  identity.py  output.py  (+12 more)
(+41 files in other folders)
