[project]
name = "csu-2026-capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "monitor",
    "prometheus-api-client>=0.7.2",
    "psutil>=7.2.2",
    "ray[default]>=2.54.1",
    "sqlalchemy>=2.0",
]
[tool.pyright]
pythonVersion = "3.12"          # 匹配你的 3.12
enablePydanticAnalysis = true    # ✅ 核心：让 Pyright 认识 FastAPI / Pydantic
venvPath = "."                  # ✅ 让 LSP 找到你项目里的 .venv 虚拟环境
venv = ".venv"                  # ✅ 自动加载依赖：fastapi、ray 等
typeCheckingMode = "basic"      # 温和检查，不乱报红

[tool.uv.workspace]
members = [
    "monitor",
]

[tool.uv.sources]
monitor = { workspace = true }
